<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.detail.DetailActivity">

    <TextView
        android:id="@+id/tvType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:textAllCaps="true"
        tools:text="Comedor" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvType"
        android:textAllCaps="true"
        tools:text="Caritas Felices" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnRoute"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:layout_margin="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TitleDetail"
                android:text="@string/address_detail" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Details"
                tools:text="Calle Numero" />

            <TextView
                android:id="@+id/tvDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Details"
                tools:text="Barrio" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TitleDetail"
                android:text="@string/day_detail"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tvDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Details"
                tools:text="Lunes a Viernes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TitleDetail"
                android:text="@string/time_detail"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Details"
                tools:text="12 a 14 hs"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TitleDetail"
                android:text="@string/attendance_detail"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tvAttendance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Details"
                tools:text="20 personas"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TitleDetail"
                android:text="@string/contact_detail"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tvContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Details"
                tools:text="Nombre Apellido"/>

            <Button
                android:id="@+id/btnContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primaryDark"
                android:text="@string/contact_btn"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/white"
        android:text="@string/route_btn"
        android:textColor="@color/primaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>